Bug 1130860 - Implement all of EscapeRegExpPattern instead of just escaping forward slashes. r=till